# bazel-ios-starter

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-Bazel  bazel-bin  bazel-out  bazel-testlogs
.claude/: settings.local.json
Ganesha.xcodeproj/: project.pbxproj
Ganesha.xcodeproj/rules_xcodeproj/: generated.xcfilelist
Ganesha.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh
Ganesha.xcodeproj/xcshareddata/xcschemes/: NewApp.xcscheme
Resources/: BUILD.bazel
Sources/: BazelApp.swift
docs/: bazel-ios-blog.md
docs/superpowers/specs/: 2026-04-19-bazel-ios-blog-design.md
